[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlbq"
authors = [{name = "Tom Dyson and Dan Braghis"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "openai",
    "fastapi",
    "uvicorn[standard]",
    "tabulate",
    "typer",
    "python-dotenv",
    "nldb",
    "google-cloud-bigquery",
]

[project.urls]
Home = "https://github.com/torchbox/nlbq"

[project.scripts]
nlbq = "nlbq.cli:cli_wrapper"